# diplomat

./: .gitignore  .travis.yml  Cargo.toml  Makefile  NOTICE  README.markdown
docs/: diplomat-internals.graffle
etc/: test.config.normal.toml
scripts/: generate-api-mod  install-openssl-linux  install-protobuf-linux  proto-fixup
src/: config.rs  config_test.rs  main.rs
src/consul/: catalog.rs  client.rs  errors.rs  kv.rs  mod.rs  request.rs
src/envoy/: accesslog.rs  address.rs  base.rs  bootstrap.rs  cds.rs  cds_grpc.rs  discovery.rs  discovery_grpc.rs  eds.rs  eds_grpc.rs  hds.rs  hds_grpc.rs  health_check.rs  lds.rs  lds_grpc.rs  protocol.rs  rds.rs  rds_grpc.rs  rls.rs  rls_grpc.rs  tls_context.rs
src/server/: eds.rs  mod.rs
