[package]
name = "diplomat"
version = "0.1.0"
authors = [ "Timothy Perrett" ]
exclude = [ "etc/*" ]
keywords = [ "envoy", "xds", "data-plane", "consul" ]
readme = "README.markdown"
description = "Envoy v2 gRPC provider, backed by Consul"
license = "Apache 2.0"
repository = "https://github.com/timperrett/diplomat"

[dependencies]
grpcio          = "0.1"
protobuf        = "1.4"
futures         = "0.1"
futures-cpupool = "0.1"
clap            = "2.24"
# prometheus      = "0.2"
toml            = "0.4"
serde           = "1.0"
serde_derive    = "1.0"
serde_json      = "1.0"
log             = "0.3.8"
error-chain     = "0.10"
reqwest         = "0.6"
url             = "1.5"

[build-dependencies]
protobuf        = "1.4"
grpcio-compiler = "0.1.0"
cargo-watch     = "6.0"

[profile.release]
lto = true
