[package]
name = "diplomat"
version = "0.1.0"
authors = [ "Timothy Perrett" ]
exclude = [ "etc/*" ]
keywords = [ "envoy", "xds", "data-plane", "consul" ]
readme = "README.markdown"
description = "Envoy v2 gRPC provider, backed by Consul"
license = "Apache 2.0"
repository = "https://github.com/timperrett/diplomat"

[dependencies]
grpcio          = "0.1"
protobuf        = "1.4"
futures         = "0.1"
futures-cpupool = "0.1"
clap            = "2.24"
toml            = "0.4"
serde           = "1.0"
serde_derive    = "1.0"
serde_json      = "1.0"
log             = "0.3.8"
env_logger      = "0.4.3"
error-chain     = "0.11"
reqwest         = "0.8"
url             = "1.5"
lru_time_cache  = "0.7"
md5             = "0.3"
# prometheus      = "0.2"

[build-dependencies]
protobuf        = "1.4"
grpcio-compiler = "0.1.0"
cargo-watch     = "6.0"

# [profile.release]
# lto = true
